// ユーザー関連
Table users {
  id bigint [pk]
  name varchar
  email varchar
  email_verified_at datetime
  password varchar
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

Table addresses {
  id bigint [pk]
  user_id bigint [not null, ref: > users.id]
  recipient_name varchar(50) [not null]
  postal_code varchar(10) [not null]
  prefecture varchar(20) [not null]
  city varchar(50) [not null]
  street varchar(100) [not null]
  building varchar(100)
  phone_number varchar(10) [not null]
  is_default boolean [default: false]
  address_type enum('home', 'work', 'other')
  created_at timestamp
  updated_at timestamp
}

// 商品関連
Table products {
  id bigint [pk]
  name varchar(100) [not null]
  description text
  price int [not null]
  stock int [not null]
  is_publish boolean [default: false]
  published_at datetime
  created_at timestamp
  updated_at timestamp
}

Table product_images {
  id bigint [pk]
  product_id bigint [not null, ref: > products.id]
  path varchar(255) [not null]
  is_main boolean [not null, default: false]
  sort_order int
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id bigint [pk]
  name varchar(100) [not null]
  created_at timestamp
  updated_at timestamp
}

Table category_product {
  category_id bigint [ref: > categories.id]
  product_id bigint [ref: > products.id]
}

Table colors {
  id bigint [pk]
  name varchar(50) [not null]
  code varchar(7)
  created_at timestamp
  updated_at timestamp
}

Table color_product {
  color_id bigint [ref: > colors.id]
  product_id bigint [ref: > products.id]
}

// 商品カート関連
Table carts {
  id bigint [pk]
  session_id varchar(255)
  user_id bigint [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table cart_items {
  id bigint [pk]
  product_id bigint [ref: > products.id]
  cart_id bigint [ref: > carts.id]
  quantity int [not null]
  price int [not null]
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id bigint [pk]
  user_id bigint [ref: > users.id]
  order_code varchar(20) [not null]
  status varchar(20) [not null]
  total_price decimal(10,2) [not null]
  shipping_fee decimal(10,2)
  recipient_name varchar(100) [not null]
  postal_code varchar(10) [not null]
  address varchar(255) [not null]
  phone_number varchar(20) [not null]
  ordered_at datetime [not null]
  paid_at datetime
  shipped_at datetime
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id bigint [pk]
  order_id bigint [ref: > orders.id]
  product_id bigint [ref: > products.id]
  product_name varchar
  price int
  quantity int
  subtotal int
  created_at timestamp
  updated_at timestamp
}
